[package]
name = "serde_yaml_neo-fuzz"
version = "0.0.0"
authors = ["Antoine Catton <devel@antoine.catton.fr>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_yaml_neo = { path = ".." }

[[bin]]
name = "fuzz_from_slice"
path = "fuzz_targets/fuzz_from_slice.rs"
test = false
doc = false

[workspace]
